# cpp-secure-containers

./: CMakeLists.txt  README.md  SecureContainers.h  basic_string_secure.h  platform.cpp  platform.h  sanitizing_allocator.h
cmake/: GoogleTest.cmake  GoogleTest.cmake.in
examples/: CMakeLists.txt  String_AutoMemorySanitizing.cpp  String_cast.cpp  String_copy.cpp  String_functions.cpp  String_move.cpp  Vector_AutoMemorySanitizing.cpp  Vector_copy.cpp  Vector_move.cpp  autoMemorySanitizing.cpp  commonUtils.h  example.cpp  move.cpp
include/: vector_secure.h
src/cpp_sc/: basic_string_secure.h  sanitizing_allocator.h
tests/: CMakeLists.txt  SanitizingAllocatorTest.cpp  StringSecureConcatenationTest.cpp  StringSecureSubstrTest.cpp  StringSecureTest.cpp  VectorSecureTest.cpp
