include_directories(${CMAKE_SOURCE_DIR})
link_libraries(cpp_secure_containers)

add_executable(Vector_AutoMemorySanitizing Vector_AutoMemorySanitizing.cpp)
add_executable(String_AutoMemorySanitizing String_AutoMemorySanitizing.cpp)
add_executable(Vector_move Vector_move.cpp)
add_executable(String_move String_move.cpp)
add_executable(Vector_copy Vector_copy.cpp)
add_executable(String_copy String_copy.cpp)
add_executable(String_functions String_functions.cpp)
